--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -13,11 +13,11 @@ jobs:
       uses: actions/stale@v9
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-issue-message: 'This issue has been automatically marked as stale because it has not had recent activity. It will be closed if no further activity occurs.'
-        close-issue-message: 'This issue was closed because it has been stalled for 1 day with no activity.'
+        stale-issue-message: 'This issue has been automatically marked as stale because it has not had activity for 60 days. It will be closed if no further activity occurs.'
+        close-issue-message: 'This issue was closed because it has been stalled for 5 days with no activity.'
         # stale-pr-message: 'This pull request has been automatically marked as stale because it has not had recent activity. It will be closed if no further activity occurs.'
-        days-before-issue-stale: 1 # Number of days of inactivity before marking as stale
-        days-before-issue-close: 1  # Number of days to wait after marking as stale before closing
+        days-before-issue-stale: 60 # Number of days of inactivity before marking as stale
+        days-before-issue-close: 5  # Number of days to wait after marking as stale before closing
         # days-before-pr-stale: -1 # Never stale PRs
         # days-before-pr-close: -1 # Never close PRs
         stale-issue-label: 'stale'
